--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,30 +29,31 @@ services:
       - microservices-net
     restart: unless-stopped
 
-  mongo:
+  mongodb:
     image: mongo
-    container_name: mongo
+    container_name: mongodb
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_ROOT_USERNAME: alibou
+      MONGO_INITDB_ROOT_PASSWORD: alibou
+      MONGO_INITDB_DATABASE: customer
     volumes:
       - mongo:/data
 
   mongo-express:
     image: mongo-express:latest
     container_name: mongo-express
-    ports:
-      - "8081:8081"
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-      ME_CONFIG_MONGODB_ADMINPASSWORD: password
-      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_ADMINUSERNAME: alibou
+      ME_CONFIG_MONGODB_ADMINPASSWORD: alibou
+      ME_CONFIG_MONGODB_SERVER: mongodb
       ME_CONFIG_BASICAUTH_USERNAME: secureadmin
       ME_CONFIG_BASICAUTH_PASSWORD: securepassword
+    ports:
+      - "8081:8081"
     depends_on:
-      - mongo
+      - mongodb
 
   mail-dev:
     container_name: ms-mail-dev
