--- a/services/payment/src/main/resources/application.yml
+++ b/services/payment/src/main/resources/application.yml
@@ -1,14 +1,15 @@
-server:
-  port: 8070
 spring:
+  application:
+    name: payment-service
+
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/order
+    url: jdbc:postgresql://localhost:5432/payment
     username: alibou
     password: alibou
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   kafka:
@@ -17,10 +18,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
-        spring.json.type.mapping: orderConfirmation:kiv.tut.microservices24.ecommerce.model.OrderConfirmation
+        spring.json.type.mapping: paymentNotificationRequest:kiv.tut.microservices24.ecommerce.kafka.PaymentNotificationRequest
 
-application:
   config:
-    customer-url: http://localhost:8098/api/v1/customer
-    payment-url: http://localhost:8060/api/v1/payment
-    product-url: http://localhost:8050/api/v1/product
+    import: optional:configserver:http://localhost:8888
