--- a/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: notification-service
   data:
     mongodb:
       username: alibou
@@ -12,11 +14,11 @@ spring:
       bootstrap-servers: localhost:9092
       group-id: paymentGroup, orderGroup
       auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringSerializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonSerializer
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: '*'
-        spring.json.type.mapping: orderConfirmation:kiv.tut.microservices24.ecommerce.model.OrderConfirmation, paymentNotificationRequest:kiv.tut.microservices24.ecommerce.dto.PaymentNotificationRequest
+        spring.json.type.mapping: orderConfirmation:kiv.tut.microservices24.ecommerce.dto.OrderConfirmation,paymentConfirmation:kiv.tut.microservices24.ecommerce.dto.PaymentConfirmation
   mail:
     host: localhost
     port: 1825
