--- a/services/config-server/src/main/resources/configurations/payment-service.yml
+++ b/services/config-server/src/main/resources/configurations/payment-service.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: payment-service
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/payment
@@ -6,7 +8,7 @@ spring:
     password: alibou
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   kafka:
