Fixed different errors

--- a/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -5,30 +5,30 @@ spring:
       password: alibou
       host: localhost
       port: 27017
-      database: customer
+      database: notification
       authentication-database: admin
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
-      group-id: paymentGroup, orderGroup
+      group-id: paymentGroup,orderGroup
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: '*'
-        spring.json.type.mapping: orderConfirmation:kiv.tut.microservices24.ecommerce.dto.OrderConfirmation,paymentConfirmation:kiv.tut.microservices24.ecommerce.dto.PaymentConfirmation
+        spring.json.type.mapping: orderConfirmation:kiv.tut.microservices24.ecommerce.dto.OrderConfirmation,paymentConfirmation:kiv.tut.microservices24.ecommerce.dto.PaymentConfirmation,paymentNotificationRequest:kiv.tut.microservices24.ecommerce.dto.PaymentNotificationRequest
   mail:
     host: localhost
-    port: 1825
+    port: 1025
     username: alibou
     password: alibou
     properties:
       mail:
         smtp:
           trust: "*"
-        auth: true
+        auth: false
         starttls:
-          enabled: true
+          enabled: false
         connectiontimeout: 5000
         timeout: 3000
         writetimeout: 5000
