--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,7 +98,20 @@ services:
     ports:
       - "9411:9411"
     networks:
-      microservices-net:
+      - microservices-net
+
+  keycloak:
+    container_name: keycloak-bsn
+    image: keycloak/keycloak:latest
+    ports:
+      - "9098:8080"
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    networks:
+      - microservices-net
+    command:
+      - "start-dev"
 
 networks:
   microservices-net:
